--- a/src/content/posts/PDE/2507.12941_AFCM.md
+++ b/src/content/posts/PDE/2507.12941_AFCM.md
@@ -19,7 +19,7 @@ Partial differential equations (PDEs) with near singular solutions pose signific
 
 In this work, we propose the ***Adaptive Feature Capture Method (AFCM)***, a novel machine learning framework that adaptively redistributes neurons and collocation points in high-gradient regions to enhance local expressive power. Inspired by adaptive moving mesh techniques, ***AFCM*** employs the gradient norm of an approximate solution as a monitor function to guide the reinitialization of feature function parameters. This ensures that partition hyperplanes and collocation points cluster where they are most needed, achieving higher resolution without increasing computational overhead.
 
-The ***AFCM*** extends the capabilities of RFM to handle PDEs with near-singular solutions while preserving its mesh-free efficiency. Numerical experiments demonstrate the method's effectiveness in accurately resolving near-singular problems, even in complex geometries. By bridging the gap between adaptive mesh refinement and randomized neural networks, ***AFCM*** offers a robust and scalable approach for solving challenging PDEs in scientific and engineering applications.
+The ***AFCM*** extends the capabilities of **RFM** to handle PDEs with near-singular solutions while preserving its mesh-free efficiency. Numerical experiments demonstrate the method's effectiveness in accurately resolving near-singular problems, even in complex geometries. By bridging the gap between adaptive mesh refinement and randomized neural networks, ***AFCM*** offers a robust and scalable approach for solving challenging PDEs in scientific and engineering applications.
 
 </td><td>
 
@@ -27,14 +27,11 @@ The ***AFCM*** extends the capabilities of RFM to handle PDEs with near-singular
 
 本文提出了一种新颖的机器学习框架：***自适应特征捕捉方法（Adaptive Feature Capture Method, AFCM）***，该方法能够自适应地在高梯度区域重新分布神经元和配置点，以增强局部表达能力。受自适应移动网格技术的启发，***AFCM*** 利用近似解的梯度范数作为监控函数（monitor function），指导特征函数参数的重初始化。这确保了划分超平面和配置点在最需要的位置聚集，从而在不增加计算开销的前提下实现更高的局部分辨率。
 
-***AFCM*** 在保持 RFM 无网格高效性的同时，显著拓展了其处理近奇异解 PDE 的能力。数值实验表明，该方法即使在复杂几何区域中，也能高精度地解析近奇异问题。通过弥合自适应网格加密与随机化神经网络之间的鸿沟，***AFCM*** 为科学与工程应用中求解具有挑战性的偏微分方程提供了一种鲁棒且可扩展的新途径。
+***AFCM*** 在保持 **RFM** 无网格高效性的同时，显著拓展了其处理近奇异解 PDE 的能力。数值实验表明，该方法即使在复杂几何区域中，也能高精度地解析近奇异问题。通过弥合自适应网格加密与随机化神经网络之间的鸿沟，***AFCM*** 为科学与工程应用中求解具有挑战性的偏微分方程提供了一种鲁棒且可扩展的新途径。
 
 </td></tr></table>
 
-## Introduction·引言
-
-
-## 1·Introduction
+## 1·Introduction·引言 <a id="sec.01"></a>
 
 <table><tr><td width="50%">
 
@@ -49,8 +46,8 @@ For instance, complex geometries often lead to distorted mesh elements, which de
 <tr><td>
 
 In contrast, the success of deep learning in computer vision and natural language processing [^Goodfellow2016Deep] has spurred interest in its application to scientific computing.
-Neural networks, with their universal approximation capabilities [^Cybenko1989Approximation], have been explored for solving ordinary and partial differential equations (ODEs and PDEs) [^E2017Deep], [^Han2018Solving], [^E2018Deep], [^Sirignano2018Dgm], [^Zang2020Weak], [^Raissi2019Physics-Informed], [^E2021Algorithms], [^Lin2024Adaptive].
-Various deep-learning-based approaches have emerged, such as the Deep Ritz Method (DRM) [^E2018Deep], Deep Galerkin Method (DGM) [^Sirignano2018Dgm], Physics-Informed Neural Networks (PINNs) [^Raissi2019Physics-Informed], and Weak Adversarial Networks (WAN) [^Zang2020Weak].
+Neural networks, with their universal approximation capabilities [^Cybenko1989Approximation], have been explored for solving ordinary and partial differential equations (ODEs and PDEs) (**DeepBSDE**[^E2017Deep] [^Han2018Solving], **DRM**[^E2018Deep], **DGM**[^Sirignano2018Dgm], **WAN**[^Zang2020Weak], **PINN**[^Raissi2019Physics-Informed], [^E2021Algorithms], [^Lin2024Adaptive]).
+Various deep-learning-based approaches have emerged, such as the **Deep Ritz Method (DRM)** [^E2018Deep], **Deep Galerkin Method (DGM)** [^Sirignano2018Dgm], **Physics-Informed Neural Networks (PINNs)** [^Raissi2019Physics-Informed], and **Weak Adversarial Networks (WAN)** [^Zang2020Weak].
 These methods offer mesh-free alternatives, circumventing the need for computationally intensive mesh generation.
 However, a critical limitation of these approaches is the lack of reliable error estimation.
 Without knowledge of the exact solution, numerical approximations often fail to exhibit clear convergence trends, even as network parameters increase [^Zhang2024Physics], raising concerns about their reliability in scientific and engineering applications.
@@ -60,19 +57,19 @@ Without knowledge of the exact solution, numerical approximations often fail to 
 </td></tr>
 <tr><td>
 
-Recent studies highlight the potential of randomized neural networks, such as the Extreme Learning Machine (ELM) [^Huang2006Extreme] or Random Feature Method (RFM) [^Neal2012Bayesian], [^Rahimi2007Random], for solving ODEs and PDEs.
+Recent studies highlight the potential of randomized neural networks, such as the **Extreme Learning Machine (ELM)** [^Huang2006Extreme] or **Random Feature Method (RFM)** [^Neal2012Bayesian], [^Rahimi2007Random], for solving ODEs and PDEs.
 ELM, a single-hidden-layer feedforward network, randomly initializes hidden-layer weights and biases while analytically optimizing output-layer weights via least squares [^Huang2015Trends].
 This architecture eliminates the need for iterative training of hidden-layer parameters, offering significant computational efficiency over conventional deep networks.
-As a mesh-free universal approximator [^Huang2006Extreme], [^Chen2022Bridging], [^Chen2023Random], [^Huang2006Universal] , ELM excels in handling PDEs in complex geometries.
-Extensions like the Physics-Informed ELM (PIELM) [^Dwivedi2020Physics] have further demonstrated its utility in solving differential equations [^Chen2022Bridging], [^Chen2023Random], [^Calabr\`o2021Extreme], [^Dong2021Local], [^Dwivedi2020Physics], [^Fabiani2021Numerical], [^Yang2018Novel], [^Wang2024Extreme], [^Dang2024Adaptive], [^Sun2024Local], [^Huang2024Adaptive].
+As a mesh-free universal approximator [^Huang2006Extreme], [^Chen2022Bridging], [^Chen2023Random], [^Huang2006Universal] , **ELM** excels in handling PDEs in complex geometries.
+Extensions like the **Physics-Informed ELM (PIELM)** [^Dwivedi2020Physics] have further demonstrated its utility in solving differential equations [^Chen2022Bridging], [^Chen2023Random], [^Calabro2021Extreme], [^Dong2021Local], [^Dwivedi2020Physics], [^Fabiani2021Numerical], [^Yang2018Novel], [^Wang2024Extreme], [^Dang2024Adaptive], [^Sun2024Local], [^Huang2024Adaptive].
 
 </td><td>
 
 </td></tr>
 <tr><td>
 
-Building on these advances, the Random Feature Method (RFM) [^Chen2022Bridging] combines partition of unity (PoU) with random feature functions to solve linear PDEs in complex geometries, achieving high accuracy in both space and time.
-However, for PDEs with near-singular solutions, RFM may struggle due to insufficient local expressive power in high-gradient regions.
+Building on these advances, the **Random Feature Method (RFM)** [^Chen2022Bridging] combines partition of unity (PoU) with random feature functions to solve linear PDEs in complex geometries, achieving high accuracy in both space and time.
+However, for PDEs with near-singular solutions, **RFM** may struggle due to insufficient local expressive power in high-gradient regions.
 In classic adaptive numerical methods, the mesh as well as the domain may be refined or decomposed, in order to improve the accuracy.
 Adaptive mesh refinement techniques, such as the moving mesh method [^Ren2000Iterative], [^Huang2010Adaptive], address this issue by dynamically clustering mesh points in critical regions using monitor functions (e.g., solution gradients or error estimates).
 Therefore, it is desirable to transfer such important and successful strategies to the field of neural-network-based solutions.
@@ -82,20 +79,21 @@ Therefore, it is desirable to transfer such important and successful strategies 
 </td></tr>
 <tr><td>
 
-In this paper, we propose the Adaptive Feature Capture Method (AFCM), an extension of RFM that enhances resolution in high-gradient regions without increasing computational overhead.
-The AFCM leverages the gradient norm of an approximate solution to redistribute feature function hyperplanes and collocation points, concentrating them in regions of steep gradients.
+In this paper, we propose the ***Adaptive Feature Capture Method (AFCM)***, an extension of **RFM** that enhances resolution in high-gradient regions without increasing computational overhead.
+The ***AFCM*** leverages the gradient norm of an approximate solution to redistribute feature function hyperplanes and collocation points, concentrating them in regions of steep gradients.
 This adaptive refinement is iteratively applied until convergence, ensuring accurate approximations even for near-singular solutions.
-Crucially, AFCM preserves the mesh-free nature of RFM, making it suitable for complex geometries while maintaining computational efficiency.
+Crucially, ***AFCM*** preserves the mesh-free nature of **RFM**, making it suitable for complex geometries while maintaining computational efficiency.
 Numerical experiments validate the method’s effectiveness, demonstrating its potential for handling near-singular PDEs.
-The remainder of this paper is organized as follows: Section 2 introduces the RFM and TransNet initialization.
-Section 3 details the AFCM algorithm.
-Section 4 presents numerical experiments, and Section 5 concludes with remarks and future directions.
+The remainder of this paper is organized as follows:
+- [Sec.02](#sec.02) introduces the **RFM** and **TransNet** initialization.
+- [Sec.03](#sec.03) details the ***AFCM*** algorithm.
+- [Sec.04](#sec.04) presents numerical experiments, and Section 5 concludes with remarks and future directions.
 
 </td><td>
 
 </td></tr></table>
 
-## 2·Preliminaries·预备知识
+## 2·Preliminaries·预备知识 <a id="sec.02"></a>
 
 ### Random Feature Method (RFM)·随机特征方法
 
@@ -114,8 +112,8 @@ where $\Omega$ is a bounded spatial domain with the boundary $\partial \Omega$.
 The $\mathcal{L}$ and $\mathcal{B}$ are linear differential and boundary operators, respectively.
 We use $d$ and $d_{\phi}$ to denote the dimensions of $\boldsymbol{x}=(x_1,x_2,...,x_{d})$ and $\boldsymbol{\phi} = (\phi_1, \phi_2,...,\phi_{d_\phi})$, respectively.
 
-In RFM, the domain $\Omega$ is partitioned into $M_p$ non-overlapping subdomains ${\Omega_n}$, each centered at $\boldsymbol{x}_n$, such that $\Omega =\cup_{n=1}^{M_p} \Omega_n$.
-For each $\Omega_n$, RFM applies a linear transformation <a id="eq.02"></a>
+In **RFM**, the domain $\Omega$ is partitioned into $M_p$ non-overlapping subdomains ${\Omega_n}$, each centered at $\boldsymbol{x}_n$, such that $\Omega =\cup_{n=1}^{M_p} \Omega_n$.
+For each $\Omega_n$, **RFM** applies a linear transformation <a id="eq.02"></a>
 
 $$
 \begin{aligned}
@@ -160,7 +158,7 @@ $$
 where $\sigma$ is the nonlinear activation function.
 The $\boldsymbol{W}_{n j}$ and $b_{n j}$ are randomly generated from the uniform distribution $\mathbb{U}\left(-R_m, R_m\right)$ and then fixed.
 The $R_m$ controls the magnitude of the parameters, and $J_n$ is the number of random feature functions.
-The approximate solution in RFM is formed by a linear combination of the random feature functions and the PoU functions as follows <a id="eq.06"></a>
+The approximate solution in **RFM** is formed by a linear combination of the random feature functions and the PoU functions as follows <a id="eq.06"></a>
 
 $$
 \begin{aligned}
@@ -189,7 +187,7 @@ $$
 $$
 
 where $\mathcal{A}$ is the coefficient matrix related to both $\mathcal{L} \tilde{\boldsymbol{\phi}}\left(\boldsymbol{x}_{q}^{n}\right)$ and $\mathcal{B} \tilde{\boldsymbol{\phi}}\left(\boldsymbol{x}_{q}^{n}\right)$, $\boldsymbol{f}$ is the right-hand side term associated with $\boldsymbol{f}\left(\boldsymbol{x}_{q}^{n}\right)$ and $\boldsymbol{g}\left(\boldsymbol{x}_{q}^{n}\right)$.
-To find the optimal parameter set $\boldsymbol{U} =\left(u_{n j}^{i}\right)^T$, the RFM samples $Q_n$ collocation points $\left\{\boldsymbol{x}_{q}^{n}\right\}_{q=1}^{Q_n}$ within each subdomain $\Omega_n$.
+To find the optimal parameter set $\boldsymbol{U} =\left(u_{n j}^{i}\right)^T$, the **RFM** samples $Q_n$ collocation points $\left\{\boldsymbol{x}_{q}^{n}\right\}_{q=1}^{Q_n}$ within each subdomain $\Omega_n$.
 It then calculates the rescaling parameters $\boldsymbol{\lambda}_{n, q}=diag(\lambda_{n, q}^{1},\cdots,\lambda_{n, q}^{d_{\phi}})$ and $\boldsymbol{\lambda}_{n, b}=diag(\lambda_{n, b}^{1},\cdots,\lambda_{n, b}^{d_{\phi}})$.
 Specifically, the rescaling parameters are determined through the following formulas <a id="eq.09"></a>
 
@@ -210,11 +208,11 @@ Finally, the numerical result is obtained using [Eq.06](#eq.06).
 
 </td></tr></table>
 
-### Neural Feature Space·神经特征空间
+### Neural Feature Space·神经特征空间 <a id="sec.02.02"></a>
 
 <table><tr><td width="50%">
 
-We follow the approach in [^Zhang2024Transferable].
+We follow the approach in **TransNet**[^Zhang2024Transferable].
 For simplicity, let's assume $\Omega_n$ to be the unit ball $B_1(0)$.
 For regions of other shapes and sizes, the target region can be embedded within the unit ball $B_1(0)$ via simple translations and scaling operations.
 The random feature function $\varphi_{n j}$ on $\Omega_n$ is redefined as follows <a id="eq.10"></a>
@@ -303,11 +301,11 @@ which can be solved via grid search.
 
 </td></tr></table>
 
-## 3·Methodology·方法
+## 3·Methodology·方法 <a id="sec.03"></a>
 
 <table><tr><td width="50%">
 
-We now present the Adaptive Feature Capture Method (AFCM).
+We now present the ***Adaptive Feature Capture Method (AFCM)***.
 For the boundary value problem in [Eq.01](#eq.01), we first partition the domain $\Omega$ into $M_p$ non-overlapping subdomains $\{\Omega_n\}_{n=1}^{M_p}$.
 Within each $\Omega_n$, we sample $Q_n$ collocation points $\{\bm{x}_q^n\}_{q=1}^{Q_n}$ and construct $J_n$ feature functions $\{\varphi_{nj}\}_{j=1}^{J_n}$ using the methodology described in [Section.02.02: Neural Feature Space](#sec.02.02).
 We employ the partition of unity (PoU) function $\psi_n$ defined in [Eq.03](#eq.03).
@@ -318,7 +316,7 @@ The loss matrix ([Eq.08](#eq.08)) is then assembled and solved via linear least 
 The accuracy of this initial solution $\tilde{\bm{\phi}}(\bm{x})$ depends on the solution's regularity.
 While satisfactory for smooth solutions, its performance degrades significantly for near-singular problems with steep gradients.
 This limitation arises because uniformly distributed partition hyperplanes and collocation points in the Random Feature Method (RFM) lack sufficient local expressive power in high-gradient regions.
-To address this, the AFCM adaptively increases feature function density and collocation point concentration in critical areas while preserving computational efficiency.
+To address this, the ***AFCM*** adaptively increases feature function density and collocation point concentration in critical areas while preserving computational efficiency.
 
 The adaptation process consists of two key components:
 
@@ -373,7 +371,7 @@ $$
 $$
 
 After these adaptations, the loss matrix ([Eq.08](#eq.08)) is reassembled and solved to obtain an improved approximation $\tilde{\bm{\phi}}(\bm{x})$.
-The AFCM iteratively applies this process until convergence, as formalized in [Algorithm.01](#algo.01).
+The ***AFCM*** iteratively applies this process until convergence, as formalized in [Algorithm.01](#algo.01).
 [Fig.01](#fig.01) illustrates the computational framework.
 
 </td><td>
@@ -389,7 +387,7 @@ The AFCM iteratively applies this process until convergence, as formalized in [A
 <tr><td>
 
 This adaptive strategy ensures that partition hyperplanes and collocation points cluster in critical regions, achieving enhanced resolution without increasing computational overhead.
-The mesh-free nature of RFM is preserved, making AFCM suitable for complex geometries while maintaining efficiency.
+The mesh-free nature of **RFM** is preserved, making ***AFCM*** suitable for complex geometries while maintaining efficiency.
 
 </td><td>
 
@@ -433,22 +431,22 @@ For $k = 1,2, \cdots, K$:
 
 </td></tr></table>
 
-## 4·Experiments·实验
+## 4·Experiments·实验 <a id="sec.04"></a>
 
-## 5·Conclusions·结论
+## 5·Conclusions·结论 <a id="sec.05"></a>
 
 <table><tr><td width="50%">
 
-In this work, we propose the adaptive feature capture method (AFCM) based on RFM, a novel approach specifically developed to handle PDEs with near singular solutions while maintaining high numerical accuracy without requiring additional computational resources and the prior information of the exact solutions.
-Building on TransNet's initialization framework, the AFCM employs the gradient norm of the approximate solutions of RFM as an indicator.
+In this work, we propose the ***Adaptive Feature Capture Method (AFCM)*** based on **RFM**, a novel approach specifically developed to handle PDEs with near singular solutions while maintaining high numerical accuracy without requiring additional computational resources and the prior information of the exact solutions.
+Building on **TransNet**'s initialization framework, the ***AFCM*** employs the gradient norm of the approximate solutions of **RFM** as an indicator.
 This mechanism drives the partition hyperplanes of feature functions and collocation points to concentrate in regions characterized by larger solution gradients.
 Within these regions, the method further enhances the steepness of feature functions' pre-activation values along the normal directions of the partition hyperplanes.
-Consequently, the AFCM achieves enhanced local expressive power in high-gradient regions, thereby yielding more accurate approximations.
-The AFCM repeats this adaptation process until no further improvement in the approximate solutions can be made.
+Consequently, the ***AFCM*** achieves enhanced local expressive power in high-gradient regions, thereby yielding more accurate approximations.
+The ***AFCM*** repeats this adaptation process until no further improvement in the approximate solutions can be made.
 The proposed method delivers high accuracy in both space and time.
 As a mesh-free algorithm, it is inherently adaptable to complex geometric configurations and demonstrates efficacy in solving near-singular PDEs.
 We show a series of numerical experiments to validate our method.
-Results consistently confirm the stability and accuracy of the AFCM.
+Results consistently confirm the stability and accuracy of the ***AFCM***.
 Future work will explore extensions of this methodology to broader classes of PDEs and applications.
 
 </td><td>
@@ -486,7 +484,7 @@ and Time-Dependent Problems.
 [^Chen2023Random]: The Random Feature Method for Time-Dependent Problems. arXiv:2304.06913.
 [^Huang2006Universal]: Universal Approximation Using Incremental Constructive Feedforward Networks With Random Hidden Nodes. IEEE Transactions on Neural Networks 2006.
 [^Dwivedi2020Physics]: Physics Informed Extreme Learning Machine (PIELM)--A Rapid Method for the Numerical Solution of Partial Differential Equations. Neurocomputing 2020.
-[^Calabr\`o2021Extreme]: Extreme Learning Machine Collocation for the Numerical Solution of Elliptic PDEs With Sharp Gradients. Computer Methods in Applied Mechanics and Engineering 2021.
+[^Calabro2021Extreme]: Extreme Learning Machine Collocation for the Numerical Solution of Elliptic PDEs With Sharp Gradients. Computer Methods in Applied Mechanics and Engineering 2021.
 [^Dong2021Local]: Local Extreme Learning Machines and Domain Decomposition for Solving Linear and Nonlinear Partial Differential Equations. Computer Methods in Applied Mechanics and Engineering 2021.
 [^Fabiani2021Numerical]: Numerical Solution and Bifurcation Analysis of Nonlinear Partial Differential Equations With Extreme Learning Machines. Journal of Scientific Computing 2021.
 [^Yang2018Novel]: A Novel Improved Extreme Learning Machine Algorithm in Solving Ordinary Differential Equations by Legendre Neural Network Methods. Advances in Difference Equations 2018.
