--- a/src/content/posts/PDE/2507.12941_AFCM.md
+++ b/src/content/posts/PDE/2507.12941_AFCM.md
@@ -3,13 +3,17 @@ title: PDE/2507.12941_AFCM.md
 published: 2025-07-23
 description: ''
 image: ''
-tags: ['PDE', 'RFM', 'ELM', '奇性', 'Singularity']
+tags: ['PDE', 'RFM', 'ELM', '奇性', 'Singularity', 'TransNet']
 category: 'PDE'
 draft: false
 lang: ''
 ---
 
 # AFCM
+
+- 标题: Adaptive Feature Capture Method for Solving Partial Differential Equations with Near Singular Solutions
+- 发表: [ArXiv](https://arxiv.org/abs/2507.12941v3)
+- 作者: 邓杨涛 (Yangtao Deng, 四川大学) | 贺巧琳 (Qiaolin He, 四川大学) | 王筱平 (Xiaoping Wang, 香港中文大学(深圳), SRIBD)
 
 ## Abstract·摘要
 
@@ -494,5 +498,5 @@ and Time-Dependent Problems.
 [^Huang2024Adaptive]: Adaptive Neural Network Basis Methods for Partial Differential Equations With Low-Regular Solutions. arXiv:2411.01998.
 [^Ren2000Iterative]: An Iterative Grid Redistribution Method for Singular Problems in Multiple Dimensions. Journal of Computational Physics 2000.
 [^Huang2010Adaptive]: Adaptive Moving Mesh Method.
-[^Zhang2024Transferable]: Transferable Neural Networks for Partial Differential Equations. Journal of Scientific Computing 2024.
+[^Zhang2024Transferable]: [Transferable Neural Networks for Partial Differential Equations.](2301.11701_TransNet.md) Journal of Scientific Computing 2024.
 [^Ramos2009Picard’s]: Picard’s Iterative Method for Nonlinear Advection--Reaction--Diffusion Equations. Applied Mathematics and Computation 2009.
