--- a/src/content/posts/PDE/2301.11701_TransNet.md
+++ b/src/content/posts/PDE/2301.11701_TransNet.md
@@ -1,6 +1,6 @@
 ---
 title: PDE/2301.11701_TransNet.md
-published: 2023.01.27
+published: 2023-01-27
 description: ''
 image: ''
 tags: ['PDE', 'TransNet']
